# logger

./: .gitignore  README.md  meson.build
logger/: logger.cpp  logger.hpp
src/private/: logger.cpp
src/public/: logger.hpp
tests/: meson.build  test.cpp
